# permu-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml  rust_master.yml  rust_testing.yml
benches/: bench.rs
src/: errors.rs  inversion.rs  lib.rs  permutation.rs  population.rs  problems.rs  rim.rs  vj.rs
typetest/: Cargo.toml
typetest/src/: main.rs
