[package]
name = "permu-rs"
version = "0.1.2"

authors = ["mikelma <mikelma7@gmail.com>"]
edition = "2018"
description = "A collection of utilities for permutations. It contains useful tools to create, manage and experiment with permutations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mikelma/permu-rs/tree/master"
keywords = ["permutation", "permutations", "QAP", "PFSP", "combinatorial"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.4.0"
